src/test/resources/public/input/typechecking/fail/double_decl/fail15.jova
class Test0{

}

class Test{
    private int a;
    private string a;
    private bool a;
    private Test0 a;
    public int a;
    public string a;
    public bool a;
    public Test0 a;
}